Fix incompatible flex gap ( old safari )

--- a/app/scss/global/layouts.scss
+++ b/app/scss/global/layouts.scss
@@ -22,15 +22,28 @@ body {
   background-color: var(--white);
   padding: rem(24) rem(24) rem(24) rem(24);
   border-radius: rem(25);
-  gap: rem(23.8);
+  //Note
+  //gap: rem(23.8); 
+  //This is Correct but in old safari and ie not support we use this instead
+
+  & > * + *{
+    margin-top: rem(23.8);
+  }
+
 
   @include breakpoints(large) {
     width: fit-content;
     max-width: rem(925);
     margin: 0 auto 0 auto;
     flex-direction: row;
-    gap: rem(31);
+    //gap: rem(31); This is Correct but in old safari and ie not support
     padding: rem(32) rem(32) rem(32) rem(32);
+
+    & > * + *{
+      margin-top: rem(0);
+      margin-left: rem(31);
+    }
+
   }
 }
 
